--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blockstagram",
   "version": "0.1.0",
-  "homepage": "https://gitname.github.io/react-gh-pages",
+  "homepage": "https://tle19.github.io/fullstack-decal-fa22/hw4-tle19",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
